--- a/features/resources/report/output.xml
+++ b/features/resources/report/output.xml
@@ -1,68 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<robot generator="Robot 6.1.1 (Python 3.11.5 on darwin)" generated="20230904 22:09:21.659" rpa="false" schemaversion="4">
+<robot generator="Robot 6.1.1 (Python 3.11.5 on darwin)" generated="20230907 17:57:08.415" rpa="false" schemaversion="4">
 <suite id="s1" name="Test" source="/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test">
 <suite id="s1-s1" name="openHome" source="/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot">
-<test id="s1-s1-t1" name="CT 02 - Pesquisa de um Produto" line="23">
+<test id="s1-s1-t1" name="CT3 - Adicionar produto na sacola" line="31">
 <kw name="Abrir o navegador" library="amazon" type="SETUP">
 <kw name="Open Browser" library="SeleniumLibrary">
 <arg>browser=chrome</arg>
 <doc>Opens a new browser instance to the optional ``url``.</doc>
-<msg timestamp="20230904 22:09:21.752" level="INFO">Opening browser 'chrome' to base url 'None'.</msg>
-<status status="PASS" starttime="20230904 22:09:21.752" endtime="20230904 22:09:23.145"/>
+<msg timestamp="20230907 17:57:08.509" level="INFO">Opening browser 'chrome' to base url 'None'.</msg>
+<status status="PASS" starttime="20230907 17:57:08.509" endtime="20230907 17:57:10.322"/>
 </kw>
 <kw name="Maximize Browser Window" library="SeleniumLibrary">
 <doc>Maximizes current browser window.</doc>
-<status status="PASS" starttime="20230904 22:09:23.145" endtime="20230904 22:09:23.572"/>
+<status status="PASS" starttime="20230907 17:57:10.322" endtime="20230907 17:57:10.433"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:21.752" endtime="20230904 22:09:23.572"/>
+<status status="PASS" starttime="20230907 17:57:08.508" endtime="20230907 17:57:10.433"/>
 </kw>
 <kw name="Acessar a home page do site Amazon.com.br" library="amazon">
 <kw name="Go To" library="SeleniumLibrary">
 <arg>${URL}</arg>
 <doc>Navigates the current browser window to the provided ``url``.</doc>
-<msg timestamp="20230904 22:09:23.573" level="INFO">Opening url 'https://www.amazon.com.br/ref=nav_logo'</msg>
-<status status="PASS" starttime="20230904 22:09:23.573" endtime="20230904 22:09:26.970"/>
+<msg timestamp="20230907 17:57:10.433" level="INFO">Opening url 'https://www.amazon.com.br/ref=nav_logo'</msg>
+<status status="PASS" starttime="20230907 17:57:10.433" endtime="20230907 17:57:13.215"/>
 </kw>
 <kw name="Wait Until Page Contains Element" library="SeleniumLibrary">
 <arg>${logo}</arg>
 <doc>Waits until the element ``locator`` appears on the current page.</doc>
-<status status="PASS" starttime="20230904 22:09:26.970" endtime="20230904 22:09:27.002"/>
+<status status="PASS" starttime="20230907 17:57:13.216" endtime="20230907 17:57:13.233"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:23.573" endtime="20230904 22:09:27.002"/>
+<status status="PASS" starttime="20230907 17:57:10.433" endtime="20230907 17:57:13.233"/>
 </kw>
 <kw name="Digitar o nome de produto &quot;Xbox Series S&quot; no campo de pesquisa" library="amazon">
 <kw name="Clicar no campo de pesquisas" library="generics">
 <kw name="Click Element" library="SeleniumLibrary">
 <arg>${CAMPO_PESQUISA}</arg>
 <doc>Click the element identified by ``locator``.</doc>
-<msg timestamp="20230904 22:09:27.003" level="INFO">Clicking element 'id=twotabsearchtextbox'.</msg>
-<status status="PASS" starttime="20230904 22:09:27.003" endtime="20230904 22:09:27.066"/>
+<msg timestamp="20230907 17:57:13.233" level="INFO">Clicking element 'id=twotabsearchtextbox'.</msg>
+<status status="PASS" starttime="20230907 17:57:13.233" endtime="20230907 17:57:13.337"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.003" endtime="20230904 22:09:27.066"/>
+<status status="PASS" starttime="20230907 17:57:13.233" endtime="20230907 17:57:13.337"/>
 </kw>
 <kw name="Digita produto no campo pesquisa" library="generics">
 <kw name="Input Text" library="SeleniumLibrary">
 <arg>${CAMPO_PESQUISA}</arg>
 <arg>Xbox Series S</arg>
 <doc>Types the given ``text`` into the text field identified by ``locator``.</doc>
-<msg timestamp="20230904 22:09:27.066" level="INFO">Typing text 'Xbox Series S' into text field 'id=twotabsearchtextbox'.</msg>
-<status status="PASS" starttime="20230904 22:09:27.066" endtime="20230904 22:09:27.222"/>
+<msg timestamp="20230907 17:57:13.338" level="INFO">Typing text 'Xbox Series S' into text field 'id=twotabsearchtextbox'.</msg>
+<status status="PASS" starttime="20230907 17:57:13.337" endtime="20230907 17:57:13.491"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.066" endtime="20230904 22:09:27.222"/>
+<status status="PASS" starttime="20230907 17:57:13.337" endtime="20230907 17:57:13.491"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.002" endtime="20230904 22:09:27.222"/>
+<status status="PASS" starttime="20230907 17:57:13.233" endtime="20230907 17:57:13.491"/>
 </kw>
 <kw name="Clicar no botão de pesquisa" library="amazon">
 <kw name="Clica no botão pesquisar" library="generics">
 <kw name="Click Button" library="SeleniumLibrary">
 <arg>${BOTAO_PESQUISAR}</arg>
 <doc>Clicks the button identified by ``locator``.</doc>
-<msg timestamp="20230904 22:09:27.222" level="INFO">Clicking button 'id=nav-search-submit-button'.</msg>
-<status status="PASS" starttime="20230904 22:09:27.222" endtime="20230904 22:09:27.294"/>
+<msg timestamp="20230907 17:57:13.491" level="INFO">Clicking button 'id=nav-search-submit-button'.</msg>
+<status status="PASS" starttime="20230907 17:57:13.491" endtime="20230907 17:57:15.187"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.222" endtime="20230904 22:09:27.294"/>
+<status status="PASS" starttime="20230907 17:57:13.491" endtime="20230907 17:57:15.187"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.222" endtime="20230904 22:09:27.294"/>
+<status status="PASS" starttime="20230907 17:57:13.491" endtime="20230907 17:57:15.187"/>
 </kw>
 <kw name="Verificar o resultado da pesquisa, listando o produto pesquisado" library="amazon">
 <kw name="Aguarde elemento mostrar em tela" library="generics">
@@ -70,36 +70,52 @@
 <kw name="Wait Until Page Contains" library="SeleniumLibrary">
 <arg>${TEXT}</arg>
 <doc>Waits until ``text`` appears on the current page.</doc>
-<status status="PASS" starttime="20230904 22:09:27.295" endtime="20230904 22:09:28.371"/>
+<status status="PASS" starttime="20230907 17:57:15.188" endtime="20230907 17:57:15.204"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.295" endtime="20230904 22:09:28.371"/>
+<status status="PASS" starttime="20230907 17:57:15.188" endtime="20230907 17:57:15.204"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:27.294" endtime="20230904 22:09:28.371"/>
+<status status="PASS" starttime="20230907 17:57:15.187" endtime="20230907 17:57:15.204"/>
+</kw>
+<kw name="Clica no produto" library="generics">
+<arg>${PRODUTO_XBOX}</arg>
+<kw name="Aguarde elemento mostrar em tela" library="generics">
+<arg>Xbox Series S</arg>
+<kw name="Wait Until Page Contains" library="SeleniumLibrary">
+<arg>${TEXT}</arg>
+<doc>Waits until ``text`` appears on the current page.</doc>
+<status status="PASS" starttime="20230907 17:57:15.205" endtime="20230907 17:57:15.222"/>
+</kw>
+<status status="PASS" starttime="20230907 17:57:15.204" endtime="20230907 17:57:15.222"/>
+</kw>
+<kw name="Click Image" library="SeleniumLibrary">
+<arg>${PRODUTO_XBOX}</arg>
+<doc>Clicks an image identified by ``locator``.</doc>
+<msg timestamp="20230907 17:57:15.222" level="INFO">Clicking image 'class:s-image'.</msg>
+<status status="PASS" starttime="20230907 17:57:15.222" endtime="20230907 17:57:19.710"/>
+</kw>
+<status status="PASS" starttime="20230907 17:57:15.204" endtime="20230907 17:57:19.710"/>
 </kw>
 <kw name="Fechar o navegador" library="amazon" type="TEARDOWN">
 <kw name="Close Browser" library="SeleniumLibrary">
 <doc>Closes the current browser.</doc>
-<status status="PASS" starttime="20230904 22:09:28.372" endtime="20230904 22:09:28.498"/>
+<status status="PASS" starttime="20230907 17:57:19.710" endtime="20230907 17:57:19.884"/>
 </kw>
-<status status="PASS" starttime="20230904 22:09:28.371" endtime="20230904 22:09:28.498"/>
+<status status="PASS" starttime="20230907 17:57:19.710" endtime="20230907 17:57:19.884"/>
 </kw>
-<doc>Esse teste verifica a busca de um produto</doc>
-<tag>busca_produtos</tag>
-<tag>lista_busca</tag>
-<status status="PASS" starttime="20230904 22:09:21.752" endtime="20230904 22:09:28.498"/>
+<tag>adiciona_produto_sacola</tag>
+<status status="PASS" starttime="20230907 17:57:08.508" endtime="20230907 17:57:19.884"/>
 </test>
 <doc>Essa suite teste o site da amazon.com.br</doc>
-<status status="PASS" starttime="20230904 22:09:21.670" endtime="20230904 22:09:28.499"/>
+<status status="PASS" starttime="20230907 17:57:08.427" endtime="20230907 17:57:19.884"/>
 </suite>
-<status status="PASS" starttime="20230904 22:09:21.659" endtime="20230904 22:09:28.500"/>
+<status status="PASS" starttime="20230907 17:57:08.416" endtime="20230907 17:57:19.885"/>
 </suite>
 <statistics>
 <total>
 <stat pass="1" fail="0" skip="0">All Tests</stat>
 </total>
 <tag>
-<stat pass="1" fail="0" skip="0">busca_produtos</stat>
-<stat pass="1" fail="0" skip="0">lista_busca</stat>
+<stat pass="1" fail="0" skip="0">adiciona_produto_sacola</stat>
 </tag>
 <suite>
 <stat pass="1" fail="0" skip="0" id="s1" name="Test">Test</stat>
