--- a/features/resources/report/output.xml
+++ b/features/resources/report/output.xml
@@ -1,149 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<robot generator="Robot 6.1.1 (Python 3.11.5 on darwin)" generated="20230907 18:05:12.233" rpa="false" schemaversion="4">
+<robot generator="Robot 6.1.1 (Python 3.11.5 on darwin)" generated="20230907 18:25:17.611" rpa="false" schemaversion="4">
 <suite id="s1" name="Test" source="/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test">
 <suite id="s1-s1" name="openHome" source="/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot">
-<test id="s1-s1-t1" name="CT3 - Adicionar produto na sacola" line="31">
+<test id="s1-s1-t1" name="CT04 - fazer login site amazon" line="43">
 <kw name="Abrir o navegador" library="amazon" type="SETUP">
 <kw name="Open Browser" library="SeleniumLibrary">
 <arg>browser=chrome</arg>
 <doc>Opens a new browser instance to the optional ``url``.</doc>
-<msg timestamp="20230907 18:05:12.324" level="INFO">Opening browser 'chrome' to base url 'None'.</msg>
-<status status="PASS" starttime="20230907 18:05:12.324" endtime="20230907 18:05:14.096"/>
+<msg timestamp="20230907 18:25:17.703" level="INFO">Opening browser 'chrome' to base url 'None'.</msg>
+<status status="PASS" starttime="20230907 18:25:17.703" endtime="20230907 18:25:19.502"/>
 </kw>
 <kw name="Maximize Browser Window" library="SeleniumLibrary">
 <doc>Maximizes current browser window.</doc>
-<status status="PASS" starttime="20230907 18:05:14.096" endtime="20230907 18:05:14.207"/>
+<status status="PASS" starttime="20230907 18:25:19.502" endtime="20230907 18:25:19.622"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:12.324" endtime="20230907 18:05:14.207"/>
+<status status="PASS" starttime="20230907 18:25:17.703" endtime="20230907 18:25:19.622"/>
 </kw>
 <kw name="Acessar a home page do site Amazon.com.br" library="amazon">
 <kw name="Go To" library="SeleniumLibrary">
 <arg>${URL}</arg>
 <doc>Navigates the current browser window to the provided ``url``.</doc>
-<msg timestamp="20230907 18:05:14.208" level="INFO">Opening url 'https://www.amazon.com.br/ref=nav_logo'</msg>
-<status status="PASS" starttime="20230907 18:05:14.208" endtime="20230907 18:05:17.030"/>
+<msg timestamp="20230907 18:25:19.623" level="INFO">Opening url 'https://www.amazon.com.br/ref=nav_logo'</msg>
+<status status="PASS" starttime="20230907 18:25:19.622" endtime="20230907 18:25:22.289"/>
 </kw>
 <kw name="Wait Until Page Contains Element" library="SeleniumLibrary">
 <arg>${logo}</arg>
 <doc>Waits until the element ``locator`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:05:17.031" endtime="20230907 18:05:17.091"/>
+<status status="PASS" starttime="20230907 18:25:22.289" endtime="20230907 18:25:22.317"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:14.207" endtime="20230907 18:05:17.091"/>
+<status status="PASS" starttime="20230907 18:25:19.622" endtime="20230907 18:25:22.317"/>
 </kw>
-<kw name="Digitar o nome de produto &quot;Xbox Series S&quot; no campo de pesquisa" library="amazon">
-<kw name="Clicar no campo de pesquisas" library="generics">
+<kw name="Clica no elemento com texto" library="generics">
+<arg>${LOGIN}</arg>
 <kw name="Click Element" library="SeleniumLibrary">
-<arg>${CAMPO_PESQUISA}</arg>
+<arg>${ELEMENT}</arg>
 <doc>Click the element identified by ``locator``.</doc>
-<msg timestamp="20230907 18:05:17.092" level="INFO">Clicking element 'id=twotabsearchtextbox'.</msg>
-<status status="PASS" starttime="20230907 18:05:17.092" endtime="20230907 18:05:17.150"/>
+<msg timestamp="20230907 18:25:22.318" level="INFO">Clicking element 'id:nav-tools'.</msg>
+<status status="PASS" starttime="20230907 18:25:22.317" endtime="20230907 18:25:23.043"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:17.091" endtime="20230907 18:05:17.150"/>
+<status status="PASS" starttime="20230907 18:25:22.317" endtime="20230907 18:25:23.043"/>
 </kw>
-<kw name="Digita produto no campo pesquisa" library="generics">
+<kw name="Aguarde elemento mostrar em tela" library="generics">
+<arg>Fazer login</arg>
+<kw name="Wait Until Page Contains" library="SeleniumLibrary">
+<arg>${TEXT}</arg>
+<doc>Waits until ``text`` appears on the current page.</doc>
+<status status="PASS" starttime="20230907 18:25:23.043" endtime="20230907 18:25:23.503"/>
+</kw>
+<status status="PASS" starttime="20230907 18:25:23.043" endtime="20230907 18:25:23.503"/>
+</kw>
+<kw name="Digite seu email" library="generics">
 <kw name="Input Text" library="SeleniumLibrary">
-<arg>${CAMPO_PESQUISA}</arg>
-<arg>Xbox Series S</arg>
+<arg>${INPUT_EMAIL}</arg>
+<arg>teste@teste.com</arg>
 <doc>Types the given ``text`` into the text field identified by ``locator``.</doc>
-<msg timestamp="20230907 18:05:17.151" level="INFO">Typing text 'Xbox Series S' into text field 'id=twotabsearchtextbox'.</msg>
-<status status="PASS" starttime="20230907 18:05:17.151" endtime="20230907 18:05:17.297"/>
+<msg timestamp="20230907 18:25:23.504" level="INFO">Typing text 'teste@teste.com' into text field 'id:ap_email'.</msg>
+<status status="PASS" starttime="20230907 18:25:23.503" endtime="20230907 18:25:23.740"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:17.150" endtime="20230907 18:05:17.297"/>
-</kw>
-<status status="PASS" starttime="20230907 18:05:17.091" endtime="20230907 18:05:17.297"/>
-</kw>
-<kw name="Clicar no botão de pesquisa" library="amazon">
-<kw name="Clica no botão pesquisar" library="generics">
 <kw name="Click Button" library="SeleniumLibrary">
-<arg>${BOTAO_PESQUISAR}</arg>
+<arg>${BOTAO_CONTINUAR}</arg>
 <doc>Clicks the button identified by ``locator``.</doc>
-<msg timestamp="20230907 18:05:17.298" level="INFO">Clicking button 'id=nav-search-submit-button'.</msg>
-<status status="PASS" starttime="20230907 18:05:17.298" endtime="20230907 18:05:17.366"/>
+<msg timestamp="20230907 18:25:23.741" level="INFO">Clicking button 'id:continue'.</msg>
+<status status="PASS" starttime="20230907 18:25:23.740" endtime="20230907 18:25:23.816"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:17.297" endtime="20230907 18:05:17.366"/>
+<kw name="Sleep" library="BuiltIn">
+<arg>5</arg>
+<doc>Pauses the test executed for the given time.</doc>
+<msg timestamp="20230907 18:25:28.818" level="INFO">Slept 5 seconds</msg>
+<status status="PASS" starttime="20230907 18:25:23.816" endtime="20230907 18:25:28.818"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:17.297" endtime="20230907 18:05:17.366"/>
+<status status="PASS" starttime="20230907 18:25:23.503" endtime="20230907 18:25:28.819"/>
 </kw>
-<kw name="Verificar o resultado da pesquisa, listando o produto pesquisado" library="amazon">
-<kw name="Aguarde elemento mostrar em tela" library="generics">
-<arg>Resultados</arg>
-<kw name="Wait Until Page Contains" library="SeleniumLibrary">
-<arg>${TEXT}</arg>
-<doc>Waits until ``text`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:05:17.367" endtime="20230907 18:05:18.404"/>
+<kw name="Digite sua senha" library="generics">
+<kw name="Input Password" library="SeleniumLibrary">
+<arg>${INPUT_PASSWORD}</arg>
+<arg>1234</arg>
+<doc>Types the given password into the text field identified by ``locator``.</doc>
+<msg timestamp="20230907 18:25:28.821" level="INFO">Typing password into text field 'name:password'.</msg>
+<msg timestamp="20230907 18:25:28.857" level="INFO">Temporally setting log level to: NONE</msg>
+<msg timestamp="20230907 18:25:28.877" level="INFO">Log level changed from NONE to INFO.</msg>
+<status status="PASS" starttime="20230907 18:25:28.820" endtime="20230907 18:25:28.878"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:17.367" endtime="20230907 18:05:18.404"/>
+<kw name="Sleep" library="BuiltIn">
+<arg>5</arg>
+<doc>Pauses the test executed for the given time.</doc>
+<msg timestamp="20230907 18:25:33.880" level="INFO">Slept 5 seconds</msg>
+<status status="PASS" starttime="20230907 18:25:28.878" endtime="20230907 18:25:33.880"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:17.366" endtime="20230907 18:05:18.404"/>
-</kw>
-<kw name="Clica no produto" library="generics">
-<arg>${PRODUTO_XBOX}</arg>
-<kw name="Aguarde elemento mostrar em tela" library="generics">
-<arg>Xbox Series S</arg>
-<kw name="Wait Until Page Contains" library="SeleniumLibrary">
-<arg>${TEXT}</arg>
-<doc>Waits until ``text`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:05:18.404" endtime="20230907 18:05:18.420"/>
-</kw>
-<status status="PASS" starttime="20230907 18:05:18.404" endtime="20230907 18:05:18.420"/>
-</kw>
-<kw name="Click Image" library="SeleniumLibrary">
-<arg>${PRODUTO_XBOX}</arg>
-<doc>Clicks an image identified by ``locator``.</doc>
-<msg timestamp="20230907 18:05:18.421" level="INFO">Clicking image 'class:s-image'.</msg>
-<status status="PASS" starttime="20230907 18:05:18.420" endtime="20230907 18:05:19.338"/>
-</kw>
-<status status="PASS" starttime="20230907 18:05:18.404" endtime="20230907 18:05:19.338"/>
-</kw>
-<kw name="Aguarde elemento mostrar em tela" library="generics">
-<arg>Adicionar ao carrinho</arg>
-<kw name="Wait Until Page Contains" library="SeleniumLibrary">
-<arg>${TEXT}</arg>
-<doc>Waits until ``text`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:05:19.339" endtime="20230907 18:05:22.733"/>
-</kw>
-<status status="PASS" starttime="20230907 18:05:19.339" endtime="20230907 18:05:22.733"/>
-</kw>
-<kw name="Clica no botão" library="generics">
-<arg>${ADD_CARRINHO}</arg>
-<kw name="Click Button" library="SeleniumLibrary">
-<arg>${BOTAO}</arg>
-<doc>Clicks the button identified by ``locator``.</doc>
-<msg timestamp="20230907 18:05:22.734" level="INFO">Clicking button 'id:add-to-cart-button'.</msg>
-<status status="PASS" starttime="20230907 18:05:22.733" endtime="20230907 18:05:24.255"/>
-</kw>
-<status status="PASS" starttime="20230907 18:05:22.733" endtime="20230907 18:05:24.255"/>
-</kw>
-<kw name="Aguarde elemento mostrar em tela" library="generics">
-<arg>Adicionado ao carrinho</arg>
-<kw name="Wait Until Page Contains" library="SeleniumLibrary">
-<arg>${TEXT}</arg>
-<doc>Waits until ``text`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:05:24.255" endtime="20230907 18:05:24.302"/>
-</kw>
-<status status="PASS" starttime="20230907 18:05:24.255" endtime="20230907 18:05:24.302"/>
+<status status="PASS" starttime="20230907 18:25:28.819" endtime="20230907 18:25:33.880"/>
 </kw>
 <kw name="Fechar o navegador" library="amazon" type="TEARDOWN">
 <kw name="Close Browser" library="SeleniumLibrary">
 <doc>Closes the current browser.</doc>
-<status status="PASS" starttime="20230907 18:05:24.303" endtime="20230907 18:05:24.459"/>
+<status status="PASS" starttime="20230907 18:25:33.881" endtime="20230907 18:25:34.002"/>
 </kw>
-<status status="PASS" starttime="20230907 18:05:24.303" endtime="20230907 18:05:24.460"/>
+<status status="PASS" starttime="20230907 18:25:33.881" endtime="20230907 18:25:34.002"/>
 </kw>
-<tag>adiciona_produto_sacola</tag>
-<status status="PASS" starttime="20230907 18:05:12.323" endtime="20230907 18:05:24.460"/>
+<tag>login_sucesso</tag>
+<status status="PASS" starttime="20230907 18:25:17.702" endtime="20230907 18:25:34.002"/>
 </test>
 <doc>Essa suite teste o site da amazon.com.br</doc>
-<status status="PASS" starttime="20230907 18:05:12.245" endtime="20230907 18:05:24.460"/>
+<status status="PASS" starttime="20230907 18:25:17.623" endtime="20230907 18:25:34.003"/>
 </suite>
-<status status="PASS" starttime="20230907 18:05:12.234" endtime="20230907 18:05:24.461"/>
+<status status="PASS" starttime="20230907 18:25:17.612" endtime="20230907 18:25:34.003"/>
 </suite>
 <statistics>
 <total>
 <stat pass="1" fail="0" skip="0">All Tests</stat>
 </total>
 <tag>
-<stat pass="1" fail="0" skip="0">adiciona_produto_sacola</stat>
+<stat pass="1" fail="0" skip="0">login_sucesso</stat>
 </tag>
 <suite>
 <stat pass="1" fail="0" skip="0" id="s1" name="Test">Test</stat>
