--- a/features/resources/report/output.xml
+++ b/features/resources/report/output.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<robot generator="Robot 6.1.1 (Python 3.11.5 on darwin)" generated="20230907 18:25:17.611" rpa="false" schemaversion="4">
+<robot generator="Robot 6.1.1 (Python 3.11.5 on darwin)" generated="20230907 18:30:27.310" rpa="false" schemaversion="4">
 <suite id="s1" name="Test" source="/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test">
 <suite id="s1-s1" name="openHome" source="/Users/tamiresrodrigues/Desktop/automacao_RobotFramework/features/resources/test/openHome.robot">
 <test id="s1-s1-t1" name="CT04 - fazer login site amazon" line="43">
@@ -7,102 +7,102 @@
 <kw name="Open Browser" library="SeleniumLibrary">
 <arg>browser=chrome</arg>
 <doc>Opens a new browser instance to the optional ``url``.</doc>
-<msg timestamp="20230907 18:25:17.703" level="INFO">Opening browser 'chrome' to base url 'None'.</msg>
-<status status="PASS" starttime="20230907 18:25:17.703" endtime="20230907 18:25:19.502"/>
+<msg timestamp="20230907 18:30:27.404" level="INFO">Opening browser 'chrome' to base url 'None'.</msg>
+<status status="PASS" starttime="20230907 18:30:27.404" endtime="20230907 18:30:29.294"/>
 </kw>
 <kw name="Maximize Browser Window" library="SeleniumLibrary">
 <doc>Maximizes current browser window.</doc>
-<status status="PASS" starttime="20230907 18:25:19.502" endtime="20230907 18:25:19.622"/>
+<status status="PASS" starttime="20230907 18:30:29.294" endtime="20230907 18:30:29.411"/>
 </kw>
-<status status="PASS" starttime="20230907 18:25:17.703" endtime="20230907 18:25:19.622"/>
+<status status="PASS" starttime="20230907 18:30:27.404" endtime="20230907 18:30:29.411"/>
 </kw>
 <kw name="Acessar a home page do site Amazon.com.br" library="amazon">
 <kw name="Go To" library="SeleniumLibrary">
 <arg>${URL}</arg>
 <doc>Navigates the current browser window to the provided ``url``.</doc>
-<msg timestamp="20230907 18:25:19.623" level="INFO">Opening url 'https://www.amazon.com.br/ref=nav_logo'</msg>
-<status status="PASS" starttime="20230907 18:25:19.622" endtime="20230907 18:25:22.289"/>
+<msg timestamp="20230907 18:30:29.412" level="INFO">Opening url 'https://www.amazon.com.br/ref=nav_logo'</msg>
+<status status="PASS" starttime="20230907 18:30:29.412" endtime="20230907 18:30:31.872"/>
 </kw>
 <kw name="Wait Until Page Contains Element" library="SeleniumLibrary">
 <arg>${logo}</arg>
 <doc>Waits until the element ``locator`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:25:22.289" endtime="20230907 18:25:22.317"/>
+<status status="PASS" starttime="20230907 18:30:31.873" endtime="20230907 18:30:31.897"/>
 </kw>
-<status status="PASS" starttime="20230907 18:25:19.622" endtime="20230907 18:25:22.317"/>
+<status status="PASS" starttime="20230907 18:30:29.411" endtime="20230907 18:30:31.898"/>
 </kw>
 <kw name="Clica no elemento com texto" library="generics">
 <arg>${LOGIN}</arg>
 <kw name="Click Element" library="SeleniumLibrary">
 <arg>${ELEMENT}</arg>
 <doc>Click the element identified by ``locator``.</doc>
-<msg timestamp="20230907 18:25:22.318" level="INFO">Clicking element 'id:nav-tools'.</msg>
-<status status="PASS" starttime="20230907 18:25:22.317" endtime="20230907 18:25:23.043"/>
+<msg timestamp="20230907 18:30:31.898" level="INFO">Clicking element 'id:nav-tools'.</msg>
+<status status="PASS" starttime="20230907 18:30:31.898" endtime="20230907 18:30:32.969"/>
 </kw>
-<status status="PASS" starttime="20230907 18:25:22.317" endtime="20230907 18:25:23.043"/>
+<status status="PASS" starttime="20230907 18:30:31.898" endtime="20230907 18:30:32.969"/>
 </kw>
 <kw name="Aguarde elemento mostrar em tela" library="generics">
 <arg>Fazer login</arg>
 <kw name="Wait Until Page Contains" library="SeleniumLibrary">
 <arg>${TEXT}</arg>
 <doc>Waits until ``text`` appears on the current page.</doc>
-<status status="PASS" starttime="20230907 18:25:23.043" endtime="20230907 18:25:23.503"/>
+<status status="PASS" starttime="20230907 18:30:32.969" endtime="20230907 18:30:32.981"/>
 </kw>
-<status status="PASS" starttime="20230907 18:25:23.043" endtime="20230907 18:25:23.503"/>
+<status status="PASS" starttime="20230907 18:30:32.969" endtime="20230907 18:30:32.981"/>
 </kw>
 <kw name="Digite seu email" library="generics">
 <kw name="Input Text" library="SeleniumLibrary">
 <arg>${INPUT_EMAIL}</arg>
-<arg>teste@teste.com</arg>
+<arg>tamy.rdasilva@gmail.com</arg>
 <doc>Types the given ``text`` into the text field identified by ``locator``.</doc>
-<msg timestamp="20230907 18:25:23.504" level="INFO">Typing text 'teste@teste.com' into text field 'id:ap_email'.</msg>
-<status status="PASS" starttime="20230907 18:25:23.503" endtime="20230907 18:25:23.740"/>
+<msg timestamp="20230907 18:30:32.981" level="INFO">Typing text 'tamy.rdasilva@gmail.com' into text field 'id:ap_email'.</msg>
+<status status="PASS" starttime="20230907 18:30:32.981" endtime="20230907 18:30:33.142"/>
 </kw>
 <kw name="Click Button" library="SeleniumLibrary">
 <arg>${BOTAO_CONTINUAR}</arg>
 <doc>Clicks the button identified by ``locator``.</doc>
-<msg timestamp="20230907 18:25:23.741" level="INFO">Clicking button 'id:continue'.</msg>
-<status status="PASS" starttime="20230907 18:25:23.740" endtime="20230907 18:25:23.816"/>
+<msg timestamp="20230907 18:30:33.143" level="INFO">Clicking button 'id:continue'.</msg>
+<status status="PASS" starttime="20230907 18:30:33.142" endtime="20230907 18:30:34.260"/>
 </kw>
-<kw name="Sleep" library="BuiltIn">
-<arg>5</arg>
-<doc>Pauses the test executed for the given time.</doc>
-<msg timestamp="20230907 18:25:28.818" level="INFO">Slept 5 seconds</msg>
-<status status="PASS" starttime="20230907 18:25:23.816" endtime="20230907 18:25:28.818"/>
-</kw>
-<status status="PASS" starttime="20230907 18:25:23.503" endtime="20230907 18:25:28.819"/>
+<status status="PASS" starttime="20230907 18:30:32.981" endtime="20230907 18:30:34.260"/>
 </kw>
 <kw name="Digite sua senha" library="generics">
 <kw name="Input Password" library="SeleniumLibrary">
 <arg>${INPUT_PASSWORD}</arg>
-<arg>1234</arg>
+<arg>@Tk230701</arg>
 <doc>Types the given password into the text field identified by ``locator``.</doc>
-<msg timestamp="20230907 18:25:28.821" level="INFO">Typing password into text field 'name:password'.</msg>
-<msg timestamp="20230907 18:25:28.857" level="INFO">Temporally setting log level to: NONE</msg>
-<msg timestamp="20230907 18:25:28.877" level="INFO">Log level changed from NONE to INFO.</msg>
-<status status="PASS" starttime="20230907 18:25:28.820" endtime="20230907 18:25:28.878"/>
+<msg timestamp="20230907 18:30:34.261" level="INFO">Typing password into text field 'name:password'.</msg>
+<msg timestamp="20230907 18:30:34.285" level="INFO">Temporally setting log level to: NONE</msg>
+<msg timestamp="20230907 18:30:34.307" level="INFO">Log level changed from NONE to INFO.</msg>
+<status status="PASS" starttime="20230907 18:30:34.260" endtime="20230907 18:30:34.307"/>
+</kw>
+<kw name="Click Button" library="SeleniumLibrary">
+<arg>${FAZER_LOGIN}</arg>
+<doc>Clicks the button identified by ``locator``.</doc>
+<msg timestamp="20230907 18:30:34.307" level="INFO">Clicking button 'id:signInSubmit'.</msg>
+<status status="PASS" starttime="20230907 18:30:34.307" endtime="20230907 18:30:34.381"/>
 </kw>
 <kw name="Sleep" library="BuiltIn">
 <arg>5</arg>
 <doc>Pauses the test executed for the given time.</doc>
-<msg timestamp="20230907 18:25:33.880" level="INFO">Slept 5 seconds</msg>
-<status status="PASS" starttime="20230907 18:25:28.878" endtime="20230907 18:25:33.880"/>
+<msg timestamp="20230907 18:30:39.382" level="INFO">Slept 5 seconds</msg>
+<status status="PASS" starttime="20230907 18:30:34.381" endtime="20230907 18:30:39.382"/>
 </kw>
-<status status="PASS" starttime="20230907 18:25:28.819" endtime="20230907 18:25:33.880"/>
+<status status="PASS" starttime="20230907 18:30:34.260" endtime="20230907 18:30:39.382"/>
 </kw>
 <kw name="Fechar o navegador" library="amazon" type="TEARDOWN">
 <kw name="Close Browser" library="SeleniumLibrary">
 <doc>Closes the current browser.</doc>
-<status status="PASS" starttime="20230907 18:25:33.881" endtime="20230907 18:25:34.002"/>
+<status status="PASS" starttime="20230907 18:30:39.383" endtime="20230907 18:30:39.511"/>
 </kw>
-<status status="PASS" starttime="20230907 18:25:33.881" endtime="20230907 18:25:34.002"/>
+<status status="PASS" starttime="20230907 18:30:39.383" endtime="20230907 18:30:39.511"/>
 </kw>
 <tag>login_sucesso</tag>
-<status status="PASS" starttime="20230907 18:25:17.702" endtime="20230907 18:25:34.002"/>
+<status status="PASS" starttime="20230907 18:30:27.404" endtime="20230907 18:30:39.511"/>
 </test>
 <doc>Essa suite teste o site da amazon.com.br</doc>
-<status status="PASS" starttime="20230907 18:25:17.623" endtime="20230907 18:25:34.003"/>
+<status status="PASS" starttime="20230907 18:30:27.322" endtime="20230907 18:30:39.511"/>
 </suite>
-<status status="PASS" starttime="20230907 18:25:17.612" endtime="20230907 18:25:34.003"/>
+<status status="PASS" starttime="20230907 18:30:27.311" endtime="20230907 18:30:39.512"/>
 </suite>
 <statistics>
 <total>
